@@ -1821,6 +1821,20 @@ enum wxFindReplaceDialogStyles
 };
 
 //** ---------------------------------------------------------------------------- **
+//   Start constants from wx/valtext.h
+//** ---------------------------------------------------------------------------- ** 
+
+#define wxFILTER_NONE           0x0000
+#define wxFILTER_ASCII          0x0001
+#define wxFILTER_ALPHA          0x0002
+#define wxFILTER_ALPHANUMERIC   0x0004
+#define wxFILTER_NUMERIC        0x0008
+#define wxFILTER_INCLUDE_LIST   0x0010
+#define wxFILTER_EXCLUDE_LIST   0x0020
+#define wxFILTER_INCLUDE_CHAR_LIST 0x0040
+#define wxFILTER_EXCLUDE_CHAR_LIST 0x0080
+
+//** ---------------------------------------------------------------------------- **
 //   Start SWIG fixes for constants
 //** ---------------------------------------------------------------------------- ** 
 
