@@ -12,6 +12,7 @@
 - Fix to bigdemo wxScrolledWindow to avoid crashing on Linux
 - Omit FontDialog.new(window) from Mac to avoid compile error
 - Many fixes to grid-related classes (Sean Long)
+- Add TextValidator and related constants; tweak Validator (Sean Long)
 
 
 
